--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "12c9affa-50a2-11e9-0601-ff80a374b3ea"
 authors = ["IHP Systems R&D <research@ihp.dk>"]
 version = "0.1.0"
 
+[deps]
+TypeSerializers = "66ceb7d2-8c8e-4075-97ca-ace8f0b9e750"
+
 [compat]
 julia = "1"
+TypeSerializers = "0.1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
